# baton

./: Makefile.am  configure.ac  set_irods_home.sh
src/: baton.c  baton.h  json-chmod.c  json-list.c  json-metalist.c  json-metamod.c  json-metaquery.c  json-metasuper.c  json.h  json_query.c  json_query.h  metalist.c  metamod.c  metaquery.c  query.c  query.h
tests/: check_baton.c
tests/scripts/: setup_irods.sh
